Added Problem Statements

--- a/assignment2-dlcv.ipynb
+++ b/assignment2-dlcv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Statement : Implement a Multi-Layer Perceptron (MLP) to classify digits from the MNIST dataset. Experiment with different numbers of hidden layers and neurons per layer. Compare the results in terms of accuracy and training time. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -25,6 +34,13 @@
     "y_train = to_categorical(y_train, 10)\n",
     "y_test = to_categorical(y_test, 10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
