--- a/assignment3-dlcv.ipynb
+++ b/assignment3-dlcv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Statement: Investigate how different activation functions (ReLU, Sigmoid, Tanh) impact the performance of a neural network. Implement a neural network on a dataset of your choice and compare the results using the different activation functions. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
