--- a/assignment6-dlcv.ipynb
+++ b/assignment6-dlcv.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#problem statement:Design and train a Convolutional Neural Network (CNN) for image classification using the CIFAR-10 dataset. Experiment with different architectures (number of convolutional layers, filter sizes) and analyze how they influence the network's performance."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
