--- a/assignment7-dlcv.ipynb
+++ b/assignment7-dlcv.ipynb
@@ -426,7 +426,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.0"
     }
   },
   "nbformat": 4,
